# seashell

./: Cargo.toml
src/: explorer.rs  main.rs  player.rs
src/explorer/: dir.rs  format.rs
